--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
         <link rel="icon" type="image/png" href="/favicon.ico" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Jorge Novo Rodríguez</title>
+        <script
+            src="https://www.google.com/recaptcha/enterprise.js"
+            async
+            defer
+        ></script>
     </head>
     <body>
         <div id="root"></div>
